src/test/deca/context/invalid/SansObjet/DeclVar-GE-float-int-float.deca
// Description:
//    Declaration of a float variable using >= operation between a int variable and float .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.28) Incompatible type assignment
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  2; 
    float y = 2.5; 
    float z = 2 >= 2.5; 
}
